platform/open-match/agones-allocator-vs.yaml
# Copyright 2023 Google LLC All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: agones-destination-rule
  namespace: open-match
spec:
  host: agones-allocator.agones-system.svc.cluster.local
  subsets:
  - name: us-central1
    labels:
      region: us-central1
  - name: europe-west1
    labels:
      region: europe-west1
  - name: asia-east1
    labels:
      region: asia-east1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: agones-allocator
  namespace: open-match
spec:
  hosts:
  - agones-allocator.agones-system.svc.cluster.local
  http:
  - match:
    - headers:
        region:
          exact: us-central1
    route:
    - destination:
        host: agones-allocator.agones-system.svc.cluster.local
        subset: us-central1
  - match:
    - headers:
        region:
          exact: europe-west1
    route:
    - destination:
        host: agones-allocator.agones-system.svc.cluster.local
        subset: europe-west1
  - match:
    - headers:
        region:
          exact: asia-east1
    route:
    - destination:
        host: agones-allocator.agones-system.svc.cluster.local
        subset: asia-east1
  - redirect:
      uri: /missing/region/invalid # If no region is matched, then go to invalid endpoint to surface the error

---

# Create resolvable entity for initial dns resolution
apiVersion: v1
kind: Namespace
metadata:
  name: agones-system

---

# Create resolvable entity for initial dns resolution
apiVersion: v1
kind: Service
metadata:
  name: agones-allocator
  namespace: agones-system
spec:
  selector:
    app: agones
  ports:
  - port: 8000
    targetPort: 8000
    name: http-alloc
